@@ -309,6 +309,8 @@ CVS			+ Added configuration manager  (Matteo, 2001-11-04)
 			  - 2002-07-05:  url_prefix is now not present anymore in the cache, but added during delivery  (Niels)
 			  - 2002-07-05:  Impressions were not logged when ignore_hosts was set to array('') instead of array()  (Wim Godden)
 			  - 2002-07-05:  Fixed problem with writing empty array's to the config file during upgrading  (Niels)
+			  - 2002-07-07:  Added a new message when upgrade is successfull  (Niels)
+			  - 2002-07-07:  Message after a successfull install was flawed, because it said maintenance script needed to run every day  (Niels)
 
 
 v 2.0beta6.1		+ Minor speed improvements in view.inc.php  (Niels) 20011015
